--- a/frontend_react/src/containers/Layout/index.scss
+++ b/frontend_react/src/containers/Layout/index.scss
@@ -7,18 +7,30 @@
 
 .container
 {
-    // width: 100px;
+    // width: 100vw;
     will-change: contents;
-    height: 90%;
-    min-height: 566px;
+    height: 100%;
+    min-height: 120%;
     position: absolute;
     opacity: 0;
     // top: 5%;
     margin: 0 auto;
-    z-index: 1;
+    // z-index: 1;
     transform-style: preserve-3d;
     animation: fadeIn 1s forwards;
     animation-delay: 1s;
+   
+    // Container on medium screens
+    @media (min-width: 768px)
+    {
+        max-width: 768vw;;
+    }
+
+    // Container on large screens
+    @media (min-width: 992px)
+    {
+        min-height: 100%;
+    }
 }
 
 
